Fixes horizontal scrolling originating from `<code>` blocks.
See: https://twitter.com/kumbunterland/status/982638331757506567

The `<code>` blocks are normally expected to have a `white-space`
property of `normal`, at least I assume docbook would expect the
default. Bootstrap (2.3) changes it to nowrap, which isn't helpful for
an inline type element.

--- a/css/nixos-site.css
+++ b/css/nixos-site.css
@@ -315,6 +315,7 @@ div.docbook code {
     background-color: inherit;
     color: inherit;
     font-size: 100%;
+    white-space: normal;
 }
 
 div.docbook div.toc {
